@@ -15,3 +15,18 @@
 // or whatever.
 //    This is important such that you can find the right function
 // without having to convert arguments all the time!
+
+rhabarber = new();
+rhabarber.domain = new();
+rhabarber.domain.newint(i) = i;
+rhabarber.domain.newreal(r) = r;
+rhabarber.domain.string = fn() "<rhabarber domain>";
+
+int.proto.convert(domain) = domain.newint(this.getint());
+int.proto.getint = fn () this;
+int.proto.domain = rhabarber.domain;
+real.proto.convert(domain) = domain.newreal(this.getreal());
+real.proto.getreal = fn() this;
+real.proto.domain = rhabarber.domain;
+
+
